--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img src="http://www.joomlaworks.net/images/demos/galleries/abstract/7.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img src="http://icdn4.digitaltrends.com/image/microsoft_xp_bliss_desktop_image-650x0.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
